# awesome-oceanbase-mcp

./: README.md  README_CN.md
.github/workflows/: publish.yaml  publish_oceanbase_mcp.yaml
doc/: obdiag_mcp_server.md
src/obdiag_mcp_server/: README.md  obdiag_mcp_server_CN.md  setup.py
src/obdiag_mcp_server/obdiag_mcp/: server.py
src/oceanbase_mcp_server/: README.md  README_CN.md
src/oceanbase_mcp_server/oceanbase_mcp/: server.py
src/ocp_mcp_server/: .env.template  .gitignore  README.md  README_CN.md  pyproject.toml
src/ocp_mcp_server/ocp_mcp/: __init__.py  __main__.py  config.py  main.py  ocp_client.py  ocp_tool.py  server.py
src/okctl_mcp_server/tools/: backup_policy.py  clusters.py  components.py  install.py  sql.py  tenants.py
src/okctl_mcp_server/utils/: errors.py  security.py
src/powermem_mcp_server/: README.md  powermem_mcp_server_CN.md  pyproject.toml
src/powermem_mcp_server/powermem_mcp/: .env.example  server.py
src/seekdb_mcp_server/: .env.template  README.md  README_CN.md  pyproject.toml
src/seekdb_mcp_server/seekdb_mcp/: server.py
src/seekdb_mcp_server/tests/: conftest.py  test_server.py
