[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocp-mcp-server"
version = "0.1.0"
description = "OceanBase Cloud Platform MCP Server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.12.0",
    "httpx>=0.25.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
]

[project.scripts]
ocp_mcp_server = "ocp_mcp.main:main"
